1- stop dark mode

--- a/src/assets/styles/components/_course-card.scss
+++ b/src/assets/styles/components/_course-card.scss
@@ -61,6 +61,11 @@
 				color: #fff;
 			}
 		}
+    .course-card__badge{
+      &.course-card__badge--category{
+        transform: translateX(0);
+      }
+    }
     // opacity: 0;
   }
   
@@ -106,19 +111,42 @@
     animation: cousreFading .6s;
     // opacity: 1;
   }
-  .course-card__sponsor {
+  .course-card__badge {
     width: 120px;
     height: 40px;
     position: absolute;
     left: 0;
-    top: 20px;
+    top: 0;
     padding: 4px;
     z-index: 7;
     background-color: $white;
-    border-radius: 0 5px 5px 0;
+    border-radius: 0 0 5px 0;
     img{
       width: 100%;
       height: 100%;
+    }
+    &.course-card__badge--category{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $black;
+      left: unset;
+      right: 0;
+      width: auto;
+      padding: 0 8px;
+      border-radius: 0;
+      transform: translateX(calc(100% + 10px));
+      transition: .3s ease all;
+      &::after{
+        position: absolute;
+        content: '';
+        top: 0;
+        left: -10px;
+        width: 10px;
+        height: 100%;
+        background-color: $white;
+        clip-path: polygon(100% 0, 0% 50%, 100% 100%);
+      }
     }
   }
   .course-card__preview {
