--- a/src/assets/styles/layouts/_normalize.scss
+++ b/src/assets/styles/layouts/_normalize.scss
@@ -15,7 +15,9 @@ html {
 }
 html[dir="rtl"]{
   font-family: unquote("Noto Kufi Arabic"), "sans-serif";
-  
+  a > span.material-icons{
+    font-family: 'Material Icons';
+  }
 }
 
 
